crates/jarl-cli/tests/integration/snapshots/integration__rules__ignore_rule_group-2.snap
---
source: crates/jarl-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--ignore-rules\").arg(\"any_is_na,SUSP\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --ignore-rules any_is_na,SUSP
