crates/jarl-cli/tests/integration/snapshots/integration__rules__invalid_rule_group.snap
---
source: crates/jarl-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--ignore-rules\").arg(\"FOOBAR,SUSP\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Unknown rules in `--ignore-rules`: FOOBAR

----- args -----
check . --ignore-rules FOOBAR,SUSP
