crates/jarl-cli/tests/integration/snapshots/integration__rules__select_ignore_interaction_with_rule_group.snap
---
source: crates/jarl-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select-rules\").arg(\"SUSP\").arg(\"--ignore-rules\").arg(\"SUSP\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --select-rules SUSP --ignore-rules SUSP
