crates/jarl-cli/tests/integration/snapshots/integration__rules__select_rule_group-2.snap
---
source: crates/jarl-cli/tests/integration/rules.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select-rules\").arg(\"any_is_na,SUSP\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [2:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [3:1] all_equal Wrap `all.equal()` in `isTRUE()`, or replace it by `identical()` if no tolerance is required.

Found 2 errors.
1 fixable with the `--fix` option (1 hidden fix can be enabled with the `--unsafe-fixes` option).

----- stderr -----

----- args -----
check . --select-rules any_is_na,SUSP
